--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,3 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/css/app-site.css": "/css/app-site.css"
+    "/js/app.js": "/js/app.js"
 }
